@@ -1,6 +1,8 @@
 Changes in 3.3:
 - Fix deadlock in PacketReader
 - Fix bug causing torrent not to get stopped properly when an IO error occurs
+- Stop or start trackers when they get disabled or enabled
+- Fix CPU consumption bug in DHT NodeLookup and AnnounceTask
 
 Changes in 3.3rc1:
 - Make sure Qt's warnings, critical and fatal messages are printed to stderr in QtMessageOutput (203423)
